<resources>
    <string name="app_name">Mahmud Toirov she\'rlari</string>
    <string name="isFirst">is_first</string>
    <string name="shoyir_haqida">Shoyir haqida</string>
    <string name="audio_she_rlar">Audio she\'rlar</string>
    <string name="she_rlar">She\'rlar</string>
    <string name="biz_bilan_bog_lanish">Biz bilan bog\'lanish</string>
    <string name="boshqalar">Boshqalar</string>
    <string name="others_two">Email</string>
    <string name="others_one">Telegram</string>
    <string name="mahmud_toirov">Mahmud Toirov</string>
    <string name="shoir">Shoir</string>
    <string name="o_zbekiston_xalq_shoyiri">O\'zbekiston xalq shoyiri</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="information">
            Shoir Mahmud Toirov 1952-yilning 31-avgustida Toshkent viloyatining Parkent qishlog’ida tavallud topgan. Mahmud Toirov 1959-yil Nizomiy nomidagi o’rta maktabga o’qishga kirib, uni 1969-yili tamomlaydi. Huddi shu yili Toshkent Davlat universiteti filologiya fakultetining kechki bo’limiga o’qishga kiradi. Ayni paytda talabalar shaharchasidagi qurilish tashkilotida duradgor bo’lib ishlaydi. Kechki bo’limda o’qigani bois, 1971-1973-yillarda harbiy xizmatda bo’ladi. 1973-yili xizmatdan qaytib o’qishni davom ettiradi. Sobiq “Yosh gvardiya” nashriyotida musahhih va musahhihlar bo’limi boshlig’i bo’lib ishlaydi. 1977-yili universitetni tugatib, Respublika radiosining bolalar va o’smirlar uchun eshittirishlar bosh tahririyatida mehnat faoliyatini davom ettiradi. 1984-yilda “Parkent tongi” gazetasiga muharrir etib tayinlanadi. 1999-yil iyun oyidan boshlab O’zbekiston Yozuvchilar uyushmasi Toshkent viloyat bo’limining mas’ul kotibi lavozimida ham ishlab kelmoqda. Mahmud Toirovning birinchi she’ri o’rta maktabning 7-sinfida o’qib yurgan kezlari “Tannoz kelur” nomi bilan Parkent tumanining “Sur’at” gazetasida e’lon qilingan.  Ilk to’plami “Ayt endi, yuragim” esa 1991-yilda G’afur G’ulom nomidagi Adabiyot va san’at nashriyotida chop etildi. Shundan so’ng shoirning “Biz nechun uchrashdik” (1992-yil), “Muhabbat shevasi” (1995-yil), “Oqib ketgan armonlar” (1996-yil), “ Barmoqlar bodasi” (1998-yil), “Haqni tanib” (1999-yil) kabi to’planma va saylanmalari nashr etilgan. Shoirning “Oqib ketgan armonlar” va “Otamning o’kinchi” nomli dostonlari o’z samimiyati bilan o’quvchilar e’tiborini qozongan. Mahmud Toirov she’rlari respublikamizning o’nlab taniqli xonandalari ijrosida kuylanib kelinmoqda. Mahmud Toirov ijodi, mehnat faoliyati munosib taqdirlandi. 2001-yilda “Mehnat shuhrati” ordeni bilan mukofotlandi. 2005-yilda unga “O’zbekiston xalq shoiri” unvoni berildi.  "Qirq yoshimga qadar sobiq tuzum azobu uqubatlarini, g‘araz niyatu kirdikorlari­ni ko‘rganim uchun 1991 yil 31 ­avgust — Prezidentimiz tomonidan Mustaqillik e’lon qilingan kun shu Vatan farzandi sifatida faxru iftixorim boshlanishi bo‘l­di. Shundan buyon har onimda iftixor bor. Iftixor vujudimda quyoshdek balqib turibdi. Yetmish ikki tomirimda qonim bilan birga oqayapti. Yuraging erku saodatdan entikib ursa, xalqing tinch, elu yurting farovon bo‘lsa, diyoring kundan-kun yashnab, Vataning ravnaqi, davlating obro‘-e’tiborini, qudratini butun dunyo ahli e’tirof etib tursa faxrlanmay, iftixor qilmay bo‘ladimi?! Mustaqillik — mening taqdirimda tillodek tovlanib turgan nur, ulug‘ imkoniyatlarga, qutlug‘ nazarlarga, she’riyat atalmish bo‘ston bag‘riga ochilgan eshik. Boisi mening birinchi she’riy to‘plamim aynan mustaqillikning ilk yili — 1991 yili chop etilgan. Tug‘ilgan kunim — 31 avgust Mustaqillik e’lon qi­lingan kunga to‘g‘ri kelishi ham taqdirimdagi saodatning sadosidir. El-yurtimiz kelajagi haqi­da o‘ylaganda, beixtiyor Prezidentimizning «Mamlaka­timizda demokratik islohotlarni yanada chuqurlashtirish va fuqarolik jamiyatini rivojlantirish konsepsiyasi» yodimga tushadi. Chunki bu muhim hujjat ertangi taraqqi­yo­timizning dasturilamali. O‘zi­mizga xos, o‘zimizga mos taraqqiyot yo‘lidan og‘ishmay borayotganimiz uchun O‘zbekistonimiz mana-man degan davlatlar bilan bo‘y­lashmoqda. Ha, biz tinch va oso­yishta, go‘zal va farovon, baxtli-saodat­li yashashga munosib ­xalqmiz. Chunki biz o‘zimizga ra­vo ko‘r­gan barcha ezguliklarni o‘z­galarga ham ravo ko‘ramiz. Mahmud Toirov 1952 yil 31 avgustda Toshkent viloyatining Parkent tumani, Parkent qishlog‘ida tug‘ilgan. O’zbekiston xalq shoiri (2005). ToshDUning filologiya fakultetini tugatgan (1977). Dastlabki she’riy to‘plami — «Ayt endi, yuragim» (1991). Shundan keyin shoirning «Biz nechun uchrashdik» (1992), «Muhabbat shevasi» (1995), «Oqib ketgan armonlar» (1996), «Barmoqlar bodasi» (1998), «Hakni tanib» (1999), «Yuzto‘rtlik», «Saylanma» (2002) kabi she’riy to‘plamlari nashr etilgan. «Mehnat shuhrati» ordeni bilan taqdirlangan (2001).
    </string>
    <string name="_1052_2016">(1052-2016)</string>
    <string name="sher_utinch">sher</string>
    <string name="saqlanganlar">Saqlanganlar</string>
    <string name="men_yoqtirganlarim">Men yoqtirganlarim</string>
</resources>