<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/about_poet"
        android:icon="@drawable/male"
        android:title="@string/shoyir_haqida" />

    <item
        android:id="@+id/audio_poem"
        android:icon="@drawable/microphone"
        android:title="@string/audio_she_rlar" />

    <item
        android:id="@+id/text_poem"
        android:icon="@drawable/poem"
        android:title="@string/she_rlar" />

    <item
        android:id="@+id/saved_poems"
        android:icon="@drawable/bookmark"
        android:title="@string/saqlanganlar" />

    <item
        android:id="@+id/liked_poems"
        android:icon="@drawable/liked"
        android:title="@string/men_yoqtirganlarim" />

    <item
        android:id="@+id/books"
        android:icon="@drawable/open_book"
        android:title="Asarlar" />


    <item
        android:title="@string/biz_bilan_bog_lanish">

        <menu>
            <item
                android:id="@+id/telegram"
                android:icon="@drawable/telegram"
                android:title="@string/others_one" />

            <item
                android:id="@+id/email"
                android:icon="@drawable/envelope"
                android:title="@string/others_two" />

        </menu>
    </item>

</menu>