<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background"
    tools:context=".fragments.InformationFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_poet"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackground"
                android:src="@drawable/mahmud_toir"
                tools:targetApi="m" />

            <TextView
                android:id="@+id/name_poet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/joan_regular_font"
                android:text="@string/mahmud_toirov"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/years"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_1052_2016"
                android:fontFamily="@font/joan_regular_font"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <TextView
                style="@style/textInfoStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_info"
                android:textIsSelectable="true"
                android:layout_gravity="start|end"
                android:text="@string/information"/>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>